--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,13 +18,17 @@
   }
 }
 
+* {
+  font-family: "Panchang", sans-serif;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
   background-color: rgb(0, 0, 0);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: "Panchang", sans-serif; */
 }
 
 .loader svg {
